--- a/Transporte_Publico/uPrincipal.fmx
+++ b/Transporte_Publico/uPrincipal.fmx
@@ -181,102 +181,101 @@ object frmPrincipal: TfrmPrincipal
       Size.Height = 473.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 3
-      object Panel3: TPanel
-        Align = Client
-        Size.Width = 432.000000000000000000
-        Size.Height = 473.000000000000000000
+      object Label3: TLabel
+        Position.X = 8.000000000000000000
+        Position.Y = 144.000000000000000000
+        Size.Width = 153.000000000000000000
+        Size.Height = 33.000000000000000000
         Size.PlatformDefault = False
-        TabOrder = 0
-        object Label3: TLabel
-          Position.X = 8.000000000000000000
-          Position.Y = 144.000000000000000000
-          Size.Width = 153.000000000000000000
-          Size.Height = 33.000000000000000000
-          Size.PlatformDefault = False
-          Text = 'Scanning Sleep'
-        end
-        object edtScanSleep: TEdit
-          Touch.InteractiveGestures = [LongTap, DoubleTap]
-          TabOrder = 2
-          KeyboardType = NumberPad
-          Position.X = 8.000000000000000000
-          Position.Y = 176.000000000000000000
-          Size.Width = 89.000000000000000000
-          Size.Height = 32.000000000000000000
-          Size.PlatformDefault = False
-        end
-        object Label2: TLabel
-          Position.X = 8.000000000000000000
-          Position.Y = 72.000000000000000000
-          Size.Width = 153.000000000000000000
-          Size.Height = 33.000000000000000000
-          Size.PlatformDefault = False
-          Text = 'SPC'
-        end
-        object Label1: TLabel
-          Position.X = 8.000000000000000000
-          Position.Y = 8.000000000000000000
-          Size.Width = 153.000000000000000000
-          Size.Height = 33.000000000000000000
-          Size.PlatformDefault = False
-          Text = 'Death Time'
-        end
-        object edtScanTime: TEdit
-          Touch.InteractiveGestures = [LongTap, DoubleTap]
-          TabOrder = 6
-          KeyboardType = NumberPad
-          Position.X = 8.000000000000000000
-          Position.Y = 256.000000000000000000
-          Size.Width = 89.000000000000000000
-          Size.Height = 32.000000000000000000
-          Size.PlatformDefault = False
-        end
-        object edtDeathTime: TEdit
-          Touch.InteractiveGestures = [LongTap, DoubleTap]
-          TabOrder = 7
-          KeyboardType = NumberPad
-          Position.X = 8.000000000000000000
-          Position.Y = 32.000000000000000000
-          Size.Width = 89.000000000000000000
-          Size.Height = 32.000000000000000000
-          Size.PlatformDefault = False
-        end
-        object edtSPC: TEdit
-          Touch.InteractiveGestures = [LongTap, DoubleTap]
-          TabOrder = 8
-          KeyboardType = NumberPad
-          Position.X = 8.000000000000000000
-          Position.Y = 104.000000000000000000
-          Size.Width = 89.000000000000000000
-          Size.Height = 32.000000000000000000
-          Size.PlatformDefault = False
-        end
-        object Label4: TLabel
-          Position.X = 8.000000000000000000
-          Position.Y = 224.000000000000000000
-          Size.Width = 153.000000000000000000
-          Size.Height = 33.000000000000000000
-          Size.PlatformDefault = False
-          Text = 'Scanning Time'
-        end
-        object edtTimer: TEdit
-          Touch.InteractiveGestures = [LongTap, DoubleTap]
-          TabOrder = 5
-          KeyboardType = NumberPad
-          Position.X = 8.000000000000000000
-          Position.Y = 336.000000000000000000
-          Size.Width = 89.000000000000000000
-          Size.Height = 32.000000000000000000
-          Size.PlatformDefault = False
-        end
-        object Label9: TLabel
-          Position.X = 8.000000000000000000
-          Position.Y = 304.000000000000000000
-          Size.Width = 153.000000000000000000
-          Size.Height = 33.000000000000000000
-          Size.PlatformDefault = False
-          Text = 'Timer Scan'
-        end
+        Text = 'Scanning Sleep'
+      end
+      object edtScanSleep: TEdit
+        Touch.InteractiveGestures = [LongTap, DoubleTap]
+        TabOrder = 2
+        KeyboardType = NumberPad
+        Position.X = 8.000000000000000000
+        Position.Y = 176.000000000000000000
+        Size.Width = 89.000000000000000000
+        Size.Height = 32.000000000000000000
+        Size.PlatformDefault = False
+      end
+      object Label2: TLabel
+        Position.X = 8.000000000000000000
+        Position.Y = 72.000000000000000000
+        Size.Width = 153.000000000000000000
+        Size.Height = 33.000000000000000000
+        Size.PlatformDefault = False
+        Text = 'SPC'
+      end
+      object Label1: TLabel
+        Position.X = 8.000000000000000000
+        Position.Y = 8.000000000000000000
+        Size.Width = 153.000000000000000000
+        Size.Height = 33.000000000000000000
+        Size.PlatformDefault = False
+        Text = 'Death Time'
+      end
+      object edtScanTime: TEdit
+        Touch.InteractiveGestures = [LongTap, DoubleTap]
+        TabOrder = 6
+        KeyboardType = NumberPad
+        Position.X = 8.000000000000000000
+        Position.Y = 256.000000000000000000
+        Size.Width = 89.000000000000000000
+        Size.Height = 32.000000000000000000
+        Size.PlatformDefault = False
+      end
+      object edtDeathTime: TEdit
+        Touch.InteractiveGestures = [LongTap, DoubleTap]
+        StyleLookup = 'editstyle'
+        TabOrder = 7
+        KeyboardType = NumberPad
+        Position.X = 8.000000000000000000
+        Position.Y = 32.000000000000000000
+        Size.Width = 89.000000000000000000
+        Size.Height = 32.000000000000000000
+        Size.PlatformDefault = False
+      end
+      object edtSPC: TEdit
+        Touch.InteractiveGestures = [LongTap, DoubleTap]
+        TabOrder = 8
+        KeyboardType = NumberPad
+        Position.X = 8.000000000000000000
+        Position.Y = 104.000000000000000000
+        Size.Width = 89.000000000000000000
+        Size.Height = 32.000000000000000000
+        Size.PlatformDefault = False
+      end
+      object Label4: TLabel
+        Position.X = 8.000000000000000000
+        Position.Y = 224.000000000000000000
+        Size.Width = 153.000000000000000000
+        Size.Height = 33.000000000000000000
+        Size.PlatformDefault = False
+        Text = 'Scanning Time'
+      end
+      object edtTimer: TEdit
+        Touch.InteractiveGestures = [LongTap, DoubleTap]
+        StyleLookup = 'editstyle'
+        TabOrder = 5
+        KeyboardType = NumberPad
+        Position.X = 8.000000000000000000
+        Position.Y = 336.000000000000000000
+        Size.Width = 89.000000000000000000
+        Size.Height = 32.000000000000000000
+        Size.PlatformDefault = False
+      end
+      object BevelEffect1: TBevelEffect
+        Direction = 45.000000000000000000
+        Size = 10
+      end
+      object Label9: TLabel
+        Position.X = 6.000000000000000000
+        Position.Y = 311.000000000000000000
+        Size.Width = 153.000000000000000000
+        Size.Height = 33.000000000000000000
+        Size.PlatformDefault = False
+        Text = 'Timer Scan'
       end
     end
   end
