--- a/Teste 31.10 - Local Server - App/app/Main.NmXhdpiPh.fmx
+++ b/Teste 31.10 - Local Server - App/app/Main.NmXhdpiPh.fmx
@@ -19,6 +19,7 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
         400s
         518s)
       inherited Lista: TTabItem
+        Size.Width = 133.000000000000000000
         ExplicitSize.cx = 320.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited LVLinhas: TListView
@@ -27,6 +28,7 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
         end
       end
       inherited TabItem1: TTabItem
+        Size.Width = 133.000000000000000000
         ExplicitSize.cx = 213.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited LVParadas: TListView
@@ -43,73 +45,72 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
               PNG = {
                 89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
                 DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                082B49444154785ED59B7B8C5C551DC7BFE7DED997EDCE63DB0AB48826187948
-                A246F8434DF00F24F8843F883C0C2A8460647786C654A3B156521B8C021BD9CE
-                EEA235D24A6B5AA810145269D3186852080846121E42AC51306D2DEDCE74FAD8
-                CECEDC73FC9D7B7F3B73EFCC6C99B9F7DCBBF193DCBBBFDF3973CFE377CEF99D
-                73EEB92B9014A3FF5D0AD17F0D20BE48DA85B0E47980B5D28B940721AD43241C
-                00D42EA8B9DD983EE7A417172FF11BE0AEF22721B10E42E9CA0F72E87BA0CE40
-                89DDB0B0011BB32F73602CC46780D1990FC2163F054EDC0CA443E65351C0F076
-                38EA87981EF937071A251E038CCD5C4BDD7B1BB5E030870471AA73900347D0E7
-                1C76F59A7D2EACEAFB610FF4BB7A2B1227E8760BA646FEC821C6306F8042792D
-                B5DC86B65657B5A340EA11CAF1311CCEEEC34EE1708CC757958D73CB5742E17A
-                A07E2344DF728E61746F48AF43317B0F0718C1AC01F2A5F510E2C7AC79E8D613
-                1887AC8E77EDD8B4C3B406D69031D6B4F522A57E82C9DCDDAC45C69C010AE51B
-                E8FE88A7347805425E8B8D236FB3DE1B77CD5C0065E96EFF312FA0C18DD4131E
-                653912660C307AECA3A8DA7FC1FB30C421847A0AFD676EC2F879A75C55FFA6CF
-                EA73E5F7A2266B985EF69A2BAF39B40473833BA8A85F7675CD69CC62C0B9A2F1
-                9B08983140BEF427EAFA9F678D705E42EAD495F8C505B36EC585BD83BAF2651C
-                799CAE7F79621B1FA22BE34A12AF423937B995FCCEDB43A82FD907D897BB712E
-                72378A23BE3CC361F1DFF0E4CB9F0B547EAEFE2EA4BCCEADBCC6B657FB2A4F1D
-                A37E8CEECF74BCBC380FFD8C7E56A3D3D269EAB41B58D7B87947247A0F28949E
-                A3643EC59A6694C6E7832CEBF837E8BE0795ECF7BD802E192EDF4BA5BB1AC5DC
-                251CA2FDCC9D749FF6148D7A9EE23FCD4A28A21960ECDD95B066FFD398F2A47C
-                13CB739761BDA8BBBA666CE6EF10D6164C667FC621DD912FFF004ADE4A73FFC5
-                1C02DCAD52385A7A15967591174053A31C3A1F532B0E7A7AEF441B02761F3926
-                DF7C2FC4AF0395378D4E5BE7D180F276CB109E680650F8124B1E52FC81A5F868
-                CDA3B50C3D12D109AA8FB0408BB7FA014C67FFC15A7CE83C745E0D7C65084144
-                0388F359A0E1905A686A23D45216BA47A8CEFB084D202F5F194210DE09168EA6
-                696DAFE7740FA5B6D212F51BAC35D14ED0735ACDDF7647C675AA7E27384FBEF4
-                30F982AFB3065465169B467A4DDF257C0FB0EC96679537EF2F8C5EE0F4729D85
-                96BC06529D77915D10DE0013B93215C4DBCE6A84E0B73B0910C8EB540DC561DA
-                6986239A0F90422F723C1CB18AA5769CEA0C79EB9F072E5482DB616073F037AA
-                99762BFEBC9C2587B4C360AD67A22D840AA5294A62D453A825AA432BDAC6A2F6
-                019AD6B1FCCDA367904E0DB0464DA13E41BDEA6FAC51DA333B683FF0F1B6E7BE
-                3593C1C02C2D8997F0C62ADA9E20EA2CE055CE850A34687D819520D6C90FE3CE
-                99C381CB5F798DACED0DC4435CC73141DC3CE62BAF117B5808455403045F583A
-                F81A4B4D2CEB0CADD86CA4AC7302571BFDCB82F162D07BB685B63CECA7590845
-                340314D3CFD3BDF9B2D2C2575038DEBA39D9CB7F832855A4B1FEEDC605F916C7
-                F8D1BBC4263A6D9DC73C8E7A9DCAF03A6BA188DA031455641B2B8CBC9F362DCD
-                742B991FD136F79FAC690EBAF3BBA55E86AD5E685CCA7A0D35D0C66A9EB963E8
-                9F5DCB8ADE08519A94B61F5BFC92A5D04473829AD5C72F82543E5F4028DC4FBB
-                BFEFB1468EB0B41F96F07A86C20D14B7D3955B192B5F4D4DE28D696DB4C9E517
-                BAB2265FBE8F4AFB5DD634A76901B432EC02689E883D8098C8BC492DF3226B1E
-                BAA0F9D21DAC11623555FC01BAD6E244E6490E6CE748E6CFD4A3A8926A23947D
-                3B87EA95DF1D2D95D76C8F5A794DF41EA02994C7E83EE9293E94BA875A7B9D3B
-                5442A104B5FC065AF83487C23C02979B3835326380B1E3CB68AAA305897F7A62
-                947A1AC25ED3B3B32A542E8572C6A9F21DE678E72514975DC14A24CC1840932F
-                3F41A9759EBBDD555F7A2B2CB9190773FBDB0E45E6D187232B4B9F81B46EA367
-                68B343D36747D4ED28E61E622512E60C3056BA9E1CDDEF595B187D4224FA9E25
-                7FF00E29FC2A8BD6F6021FA0B8CFB69F08B5308732D4A955D8B4EA348744C29C
-                010A9256764768180CE6382426C8411673DEDB6203449F05E6295A555ACD1939
-                AD392B961D79EEF763CE001A95DACA523C483C8B89F4C2BBC4109835C0647A7F
-                F07D9D616C186D7D8D5903685276CBD2D814CE11E4328FB3620CF30680886918
-                580F61BD9863C518E60D50CC1EA0BDC173AC99A1529154D25FB16694187A0021
-                C4C32C99213DBC1B13B9B3BC760F4F3C0670F0282A759A164DA19A87AD8689C7
-                000F664B48A79E622D2AEFE0706E17CBC689C7002ED28C3354D8B4E0DEC100F1
-                19A0AA5B6DAEF9C143182A953A52A9DFB0160BF1196093A841F5ED602D1C4BD3
-                4FE081A5FA13DAD88871086822CE06B632BEF26BC5DC6E70219A87A33D22DFA2
-                5DDFC554C4D0A73EDD10730F202C2B9C3394FA5BA0782BAF89DF008EA4BD81FE
-                CCB5274EBA6F8F12207E03E8AFBC657A1F6B5DA2B6A0B8BCC24AACC46F008D50
-                3D0C03FDE59755642576123280B3935AB5FD9CAF138AD6FD53994EC764B1908C
-                01DCEEACBAFC82CCDAC842222463008DB0BB5813D0D437998E74DADB2BC91920
-                97DEE3BED5391B4A8FFDF8A73E3FC919C0FD82D4DECE5A3BB3A860A8F65BD612
-                23390368A45A78180C6133EE5B7182B5C448D60053B9BFD2BDC33F39D0D4E774
-                385C4D80640DE0D2694D30BC2B91CF6C3BB00806707EE7BEE4F423C5044B8913
-                FF6EB013F9F25ECAF92A57D6DF034EE62E75E54560117A0061F95E970991D8B2
-                B7138B63807AED31BA9F768FBAFB67CDBE42FFBF61ACB48D86C2386B8BC6E2F4
-                008D105BC8012CCAD4D704F81F231DA4698908C46B0000000049454E44AE4260
-                82}
+                082649444154785ED59B7F8C5D4515C7BF33F7ED2FBBDDF7EEB61568114D3082
+                48A246F8434DF00F25F813FE20021A341A8291DD7D34A61A8DB592DA6054D8C8
+                F6ED2E5A23ADB4A6850A012595368D912685A860340114628D82696B69F7BEDD
+                FED8BE7DEFCE78E6DEB3EFF796F7EE9D7B377E927BF79C9977E7C79999333377
+                EE0AA4C5C87F07217A6F00C42749BB1C525D02C8B561A43A0A258F917004D0FB
+                A017F663FAA233615CB2246F80BB8B1F80C226086D2ADFCFA16F823E0F2DF643
+                620BB6E65EE0C04448CE0023336F8723BE0F143F07B811F3F13490DB0D5F7F1B
+                D3C3FFE640AB246380D1991BA97BEFA2165CC9218DF8A505A8BE13E8F18F077A
+                D9B918B2F456387DBD81DE8CC269BADD8EA9E15F738835EC1B205FDC482DB7A5
+                A5D575F924907984727C0CC77387B057F81C13F259EDE0E2E275D0B819A8DC0A
+                D1B39A6318D31BDC4D28E4EEE5002BD835C098B719427C97B510D37A02E350A5
+                F18E1D9B7198B26F031963434B2FD2FA7B9874EF612D36F60C902FDE42F74742
+                A5CA5F21D48DD83AFC1AEBDD71F7CC65D0D274FBF78601556EA59EF028CBB1B0
+                63809153EF41C9F913DE82010E21F453E83D7F1BC62F391BA8E6373DB22790DF
+                8CB22A637AD54B81BCE1D80A2CF4EFA1A27E3AD00DE7308F3EFFDAEA6F6260C7
+                0063DE6FA9EB7F9C35C27F1E99B3D7E1C797CD071517CE1EEACA5773E42C5DFF
+                0AC516DE41573690145E84F66F0B2AF9B5D7065059710870AE09E202D47E1486
+                EBF28C86E4BFD1192B7EACA1F20B9537A0D44D41E50D8EB3BEAEF2D4312AA7E8
+                FEFBB6571817629E31CF1A4C5A264D937615794390774CE2F780BCF72C25F341
+                D60C23343E1F64D9C4FF8DEE073097FB6618D0212B8B3FA2D25D8F82FB6E0E31
+                7EE62EBA4F878A413F47F11F622512F10C30FAC65AC833FFA94E794ABD82D5EE
+                D5D82C2A816E189DF93B84DC81C9DC0F38A433C68ADF82565FA2B9FF4A0E01EE
+                D1199CF45E84945784013435AAC14B31B5E668A8774FBC21E0F49063AA9BEF85
+                F85943E56D63D2367954A1BC833244279E01343EC55288124FB2941CCD793497
+                A14B623A41FD2E1668F1563982E9DC3F584B0E9387C9AB4A5D192210D300E252
+                16683864969ADA083DC842E708DD7E1F6168C8ABAE0C1188EE04F32787686D6F
+                E6F410AD77D212F58BACD5304E30745AB5DF76463670AAF54E709131EF61F205
+                5F600D28A91CB60D779B7E40F41E209DA6677538EF2F8D59E074735D80A6BCFA
+                32ED77911D10DD00136E910A126E670D42F0DB9D1468C8EB6C198595B4D38C46
+                3C1FA08459E484F8621D4BADF8A519F2D63F6CB8E0356E8781ED8DBFD1B5B49B
+                A9CFCB5F71CC380CD6BA26DE4228EF4D511223A1422D511A58D332168D0F3034
+                8FE5DB4F9E879BE9638D9A42BF9F7AD55F58A3B467F6D07EE07D2DCF7D65268B
+                BE795A12AFE08D55BC3D41DC5920AC5C0015A85F7E829546E4EC3B71D7CCF186
+                ABBEF206553ED8100F7113C73412E4B158798338C04224E21AA0F185A58FCFB3
+                5443CAF3B46273909117355C2DF4AE6A8C17FDE1B34DB4E4E13CCD4224E219A0
+                30F41CDD6B2F2B253E83FC6CF3E6E420FF6D44EB028DF5AF562FA85739A61EB3
+                4BAC61D236792CE2EB97A90C2FB31689B83D40534576B1C2A8FB69D3524B772E
+                FB1DDAE6FE9335C3D1607E97FA0538FA0FD54BCB9750066DAC16593885DEF98D
+                AC988D10A54969D7E3889FB01499784ED0B07EF60A285DE70B088DFB69F7F70D
+                D6C8117A872145D833346EA1B8BD81DCCC68F17A6A92704C1BA34DAEBE3C900D
+                63C5FBA8B45F67CD708E16406BA32E801689D9038889EC2BD4327F642DC41474
+                CCBB933542ACA78A3F40D7469CCEFE86035B3991FD1DF528AAA4DE0AEDDCC1A1
+                66E5776753E50DBBE356DE10BF0718F2C551BA4F864A1D5ADF4BADBD29182A91
+                D0825A7E0B2D7C6A436111816B6C9C1AD931C0E8EC2AC833B420A99F9E18AD9F
+                86703674EDACF2735741FBE354F93673BCFF3C0AABAE652516760C60182B3E41
+                A9B59FBB83559FBB13526DC751F770CBA1C822E67064ADF76128F9657A86363B
+                347DB645DF8182FB102BB1B0678051EF667274BF626D69CC0991E87986FCC1EB
+                A4F0AB2C5ADB0BBC8DE23ED27A22D4C4028AD067D761DBBA731C120B7B06C82B
+                5AD99DA061D0EF72484290832CB8E1DB620BC49F051629C812ADE6AC9CD65C10
+                E9C49EFBEBB1670083CEEC642919149EC1C4D0D2BBC408D835C0E4D0E1C6F775
+                967160B5F50D760D60C8384D4B635BF827E0661F67C51AF60D0091D030900F61
+                B35860C51AF60D50C81DA1BDC1B3ACD9C1F31495F4A7AC5925811E4008F1304B
+                767073FB31E15EE0B57B749231808F47E155685AB485AE1DB65A2619033C98F3
+                E0669E622D2EAFE3B8BB8F65EB2463800065C7196A6C5B72EF6081E40C5032AD
+                B650FBE0210A735E0599CCCF594B84E40CB04D94A17BF6B0168D41F7093C3068
+                3EA14D8C04878021E66CE068EB2BBF66ECED0697A27638DA25EA55DAF55D4945
+                8C7CEAD30909F70042CA68CE50996F8192ADBC217903F88AF606E633D7AE3813
+                BC3D4A81E40D60BEF256EE21D63A44EF4061F51C2B8992BC010C4277310CCC97
+                5FB2C04AE2A464007F2FB56AEB395F3B34ADFBA7B2ED8EC912211D0304DD5977
+                F80599DCCA422AA4630083703A5813D0D4373914EBB4B75BD233803B742078AB
+                7321B419FBC94F7DF5A46780E00B5267376BADCC630E03E55FB0961AE919C0A0
+                F4D2C36000DB71DF9AD3ACA546BA069872FF4CF736FFE440539FDFE6703505D2
+                354040BB35416E5F2A9FD9B661190CE0FF3278C9598F12132CA54EF2BBC1768C
+                150F52CE1F0D64F33DE0A47B55202F03CBD0030859F7BA4C88D496BDED581E03
+                54CA8FD1FD5C70D4DD3B6FF715FAFF0DA3DE2E1A0AE3AC2D1BCBD3030C42EC20
+                07B02C535F0DE07F197AA4695A439A6B0000000049454E44AE426082}
               FileName = 'D:\'#193'rea de Trabalho\icon.png'
             end>
         end
@@ -119,6 +120,7 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
         end
       end
       inherited Mapa: TTabItem
+        Size.Width = 134.000000000000000000
         ExplicitSize.cx = 320.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited MapView: TMapView
@@ -130,6 +132,21 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
   end
   inherited MultiView: TMultiView
     Visible = False
+    inherited edtScanSleep: TEdit
+      TabOrder = 14
+    end
+    inherited edtScanTime: TEdit
+      TabOrder = 18
+    end
+    inherited edtDeathTime: TEdit
+      TabOrder = 19
+    end
+    inherited edtSPC: TEdit
+      TabOrder = 20
+    end
+    inherited edtTimer: TEdit
+      TabOrder = 17
+    end
   end
   inherited GestureManager1: TGestureManager
     GestureData = <
