--- a/Teste 31.10 - Local Server - App/app/Main.fmx
+++ b/Teste 31.10 - Local Server - App/app/Main.fmx
@@ -8,6 +8,7 @@ object frmPrincipal: TfrmPrincipal
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   OnCreate = FormCreate
+  OnDestroy = FormDestroy
   OnShow = FormShow
   DesignerMasterStyle = 3
   object Timer1: TTimer
