Criado thread para scannear beacons. Alguns comandos de testes (tab, botões, etc).

--- a/Teste 31.10 - Local Server - App/app/Main.NmXhdpiPh.fmx
+++ b/Teste 31.10 - Local Server - App/app/Main.NmXhdpiPh.fmx
@@ -20,9 +20,42 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
         400s
         518s
         400s
+        518s
+        400s
         518s)
+      inherited TabTestes: TTabItem
+        Size.Width = 100.000000000000000000
+        ExplicitSize.cx = 100.000000000000000000
+        ExplicitSize.cy = 49.000000000000000000
+        inherited PnlBotoesTeste: TPanel
+          Size.Width = 400.000000000000000000
+          inherited Switch1: TSwitch
+            Position.X = 320.000000000000000000
+          end
+          inherited Button2: TButton
+            Position.X = 11.000000000000000000
+            Position.Y = 64.000000000000000000
+            Text = 'Limpar Lista'
+          end
+        end
+        inherited Panel1: TPanel
+          Size.Width = 400.000000000000000000
+          Size.Height = 317.000000000000000000
+          inherited lvTestes: TListView
+            Size.Width = 400.000000000000000000
+            Size.Height = 317.000000000000000000
+            ItemAppearance.ItemHeight = 64
+            ItemAppearanceObjects.ItemObjects.Text.Width = 218.000000000000000000
+            ItemAppearanceObjects.ItemObjects.Text.Height = 33.000000000000000000
+            ItemAppearanceObjects.ItemObjects.Detail.TextAlign = Leading
+            ItemAppearanceObjects.ItemObjects.Detail.Width = 288.000000000000000000
+            ItemAppearanceObjects.ItemObjects.Detail.Height = 30.000000000000000000
+            ItemAppearanceObjects.ItemObjects.Detail.PlaceOffset.Y = 33.000000000000000000
+          end
+        end
+      end
       inherited Lista: TTabItem
-        Size.Width = 133.000000000000000000
+        Size.Width = 100.000000000000000000
         ExplicitSize.cx = 320.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited LVLinhas: TListView
@@ -31,7 +64,7 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
         end
       end
       inherited TabItem1: TTabItem
-        Size.Width = 133.000000000000000000
+        Size.Width = 100.000000000000000000
         ExplicitSize.cx = 213.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited LVParadas: TListView
@@ -48,72 +81,72 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
               PNG = {
                 89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
                 DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                082849444154785ED59B7B8C5D451DC7BF33E7EECBB67B5FAD408B6882114412
-                35C21F6A827F28C127FC41E4E12B1A8291DD7B694C351A6B25B5C1A8B091EDDD
-                5DB4465A694D0B15824A2A6D1A234D0A51C1680228C41A05D3D6D2BDF776FBD8
-                DEBDF7CCF89B737E7BDF5BEE3D67CED9F849CED9DF6FE69E79FC66E6373367CE
-                0AC4C5D87F57420CDE00888F937639A4BA04906BFD4875144A1E23E108A0F741
-                2FECC7CC4567FCB86889DE007797DF07854D10DA547E9843DF007D1E5AEC87C4
-                166C4D3DCF8191109D01C68A6F8523BE07146F07B201F399D54066375CFD2DCC
-                64FECD815689C600E3C51BA97BEFA2165CC521ADB89505A8A11318708F7B7AD5
-                B918B2F2663843839EDE8EC269BA7D0ED3995F738835EC1B205FDE482DB7A5A3
-                D575F524907884727C0CC75387B057B81CE3F369EDE0E2F275D0B819A8DD0A31
-                B09A6318D31BB29B5048DDCB0156B06B805C693384F80E6B3EA6F50426A02A13
-                3D3B36E330E5D00632C6868E5EA4F5773195BE87B5D0D83340BE7C0BDD1FF195
-                3A7F855037626BE655D6FBE3EEE265D0D274FB77FB01756EA59EF028CBA1B063
-                80B1D977A1E2FC096FC2088710FA490C9EBF0D13979CF554F39B0139E0C96F44
-                555531937DD193371C5B8185E13D54D44F7ABAE11CE631E45E5BFF4D08EC1820
-                57FA2D75FD8FB246B8CF2171F63AFCE8B279AFE2C2D9435DF96A8E3C45D7BF7C
-                B183B7D195F4248517A0DDDBBC4A7EF5D511D4561C029C6BBC380FB51F854C53
-                9EC190FC3738B9F2475A2ABF507B1D4ADDE455DEE038EB9B2A4F1DA3364BF7DF
-                77BDFC381FF38C79D660D232699AB4EBC81BBCBC4312BE07E44BCF5032EF67CD
-                3046E3F341964DFCDFE87E0073A96FF8013DB2AAFC432ADDF528A4DFC921C6CF
-                DC45F7195F31E86729FE03AC04229C01C65F5F0B39F79FFA94A7D4CB589DBE1A
-                9B45CDD30DE3C5BF43C81D984A7D9F437A2357FE26B4FA22CDFD577208708F4E
-                E064E9054879851F4053A31ABD14D36B8EFA7AFF841B02CE0039A6A6F95E889F
-                B654DE36266D93471DCADB2B4370C21940E3132CF928F12B96A2A33D8FF632F4
-                494827A8DFC1022DDE6A473093FA076BD161F23079D5692A4300421A405CCA02
-                0D87C452531BA157B2D03B4277DF47185AF26A2A4300823BC1FCC9515ADB9B39
-                DD47EB9DB444FD026B0D8C13F49D56E3B7BD91F49C6AB3135C24577A987CC1E7
-                59032A2A856D997ED3F708DE03A4D3F6ACF6E7FDA5310B9C7EAE0BD096D750A2
-                FB2EB207821B60325DA682F8DB598310FC7627065AF23A5B456115ED348311CE
-                07286116393EAE58C752276EA548DEFA072D17665BB7C3C0F6D6DFE846DAED34
-                E7E5AE38661C066B7D136E21942F4D531263BE422D511959D331168D0F30B48F
-                E5CF9E3C8F4C6288356A0AFD5EEA557F618DD22EEEA1FDC07B3A9EFB723189A1
-                795A12AFE08D55B83D41D859C0AF9C071568587E8C955664E9EDB8AB78BCE56A
-                AEBC41550FB6C443DCC431AD78792C56DE200EB01088B006687D61E9E2332C35
-                90F23CADD81C24E4452D570783D9D67831EC3FDB46471ECE532C04229C010AA3
-                CFD2BDF1B252E253C89F6ADF9C1CE4BFAD685DA0B1FE95FA05F50AC734637689
-                0D4CDA268F455CFD1295E125D60211B60768AAC82E5618753F6D5A1AE9CE25BF
-                4DDBDC7FB26638EACDEF523F0F47FFA17E69F922AAA08DD5220BB3189CDFC88A
-                D908519A9476338EF8314B8109E7040DEB4F5D01A59B7C01A1713FEDFEBECE1A
-                39C2D26148E1F70C8D5B286EAF27B7335EBE9E9AC41FD3C66853AB2FF76443AE
-                7C1F95F66BAC19CED102686DD005D022217B0031997C995AE68FACF99882E64A
-                77B24688F554F107E8DA88D3C9DF7060272792BFA31E4595D45BA19D3B38D4AC
-                FCEE6CABBC6177D8CA1BC2F70043BE3C4EF7295F6942EB7BA9B537794325105A
-                50CB6FA1854F63282C22708D8D53233B06183F95853C430B92E6E989D1FA2908
-                6743DFCE2A3F7715B43B4195EF32C7BBCFA190BD969550D8318021577E8252EB
-                3E777BABBEEC4E48B51D47D3873B0E45163187236B4B1F84925FA26768B343D3
-                6757F41D28A41F622514F60C305EBA991CDD2F595B1A734224069E267FF01A29
-                FC2A8BD6F6026FA1B80F759E08B5B18032F4D975D8B6EE1C8784C29E01F28A56
-                762768180CA7392422C84116D2FEDB620B849F051629C80AADE6AC9CD65C10E9
-                849EFB9BB16700834EEC64291A149EC6E4E8D2BBC400D835C0D4E8E1D6F77596
-                7160B5F50D760D6048386D4B635BB827904E3ECE8A35EC1B0022A261201FC266
-                B1C08A35EC1BA0903A427B836758B3C3ECACA292FE8435AB44D00308211E66C9
-                0ED9CC7E4CA62FF0DA3D38D118C0C5A328D6685AB4856E1CB65A261A033C982A
-                21937892B5B0BC86E3E97D2C5B271A0378283BCE5063DB927B070B4467808A69
-                B585C6070F41982BD59048FC8CB54888CE00DB44157A600F6BC158997E020FAC
-                349FD046468443C010723670B4F5955F3BF676834BD1381CED13F50AEDFAAEA4
-                22063EF5E985887B0021653067A8CCB740D156DE10BD015C457B03F3996B5F9C
-                F1DE1EC540F406305F79ABEC21D67A44EF4061F51C2B9112BD010C42F7310CCC
-                975FB2C04AE4C46400772FB56AE7395F3734ADFBA793DD8EC922211E0378DD59
-                F7F80599DCCA422CC4630083707A5813D0D437351AEAB4B75FE233407AF480F7
-                56E7426833F6A39FFA9A89CF00DE17A4CE6ED63A99C71C46AA3F672D36E23380
-                41E9A587C108B6E3BE35A7598B8D780D309DFE33DDBBFC93034D7D6E97C3D518
-                88D7001EDDD604997DB17C66DB85653080FB0BEF2567334A4CB2143BD1EF06BB
-                912B1FA49C3FECC9E67BC0A9F4559EBC0C2C430F2064D3EB3221625BF6766379
-                0C50AB3E46F773DE51F7E0BCDD57E8FF378C9776D15098606DD9589E1E601062
-                0739806599FA1A00FF039604A468598EDEB80000000049454E44AE426082}
+                082A49444154785ED59B7B8C5C551DC7BFE7DCD9976D7766B6BB022DA2094610
+                4894087FA809FEA1049FF00711F0190DC1C8EE0C8DA94663ADA436181536B29D
+                DD456BA495D6B45031A8A4D2A631D2A410150C243C8450A240DADADDCE4CB78F
+                EDECCC3DC7DFB9F7B7F3DE3273EFB977E327B9777FBF73E69EC7EF9CF33BE7DC
+                7357202E46FFBB12A2F706407C9AB44B21D545805CE347AA2350F228098701BD
+                177A611FA62F38EDC7454BF406B8ABF821286C84D0A6F2FD1CFA36E873D0621F
+                2436634BEA590E8C84E80C309A7F371CF16360F60BC048C07C663430BC0BAEFE
+                3EA687FEC3815689C60063F91BA97BEFA4165CC5218DB8A505A8BEE3E8718F79
+                7AD9B910B2F44E387DBD9EDE8CC229BA7D1953437FE4106BD83740B6B8815A6E
+                734BABEBF22C907898727C14C75207B147B81CE3F379EDE0C2E275D0B819A8DC
+                0AD133CC318CE90D231B914BDDC30156B06B804C611384F8216B3EA6F504C6A1
+                4AE31D3B36E33065DF7A32C6FA965EA4F58F3099BE9BB5D0D83340B6780BDD1F
+                F6952ACF43A81BB165E80DD6BBE3AEFC25D0D274FB0FF801556EA59EF008CBA1
+                B06380D11357A2E4FC03EFC0008710FA71F49EBB0DE3179DF154F39B1ED9E3C9
+                6F47599531BDFA454F5E7F740516FA7753513FEBE986B398479F7B6DF53721B0
+                63804CE1CFD4F53FC91AE13E83C499EBF0F34BE6BD8A0B673775E5AB38F2245D
+                FFF6C516DE4357D293145E80766FF32AF9AD37065059711070AEF1E23CD43EE4
+                86EAF20C86E4BFC1C9143FD150F985CA0C94BAC9ABBCC171D6D5559E3A46E504
+                DDFFDAF6F2E37CCC33E6598349CBA469D2AE226FF0F20E49F81E902D3C45C97C
+                9835C3288DCF075836F12FD37D3FE652DFF5033A6455F16754BAEB914BBF9F43
+                8C9FB993EED3BE62D04F53FC4758094438038CCDAC812CBE559DF2947A05C3E9
+                ABB049543CDD3096FF1784DC8EC9D44F38A43332C5EF41ABAFD1DC7F39870077
+                EB04660B2F40CACBFC009A1A55EA624C8D1CF1F5EE0937049C1E724C75F3BD10
+                BF6AA8BC6D4CDA268F2A94B75786E0843380C66758F251E20F2C4547731ECD65
+                E892904E50BF8F055ABC550E633AF51A6BD161F2307955A92B4300421A405CCC
+                020D87C452531BA157B2D03942B7DF47181AF2AA2B4300823BC1ECEC20ADEDCD
+                9CEEA3F50E5AA27E95B51AC609FA4EABF6DBCE487A4EB5DE092E92293C44BEE0
+                2BAC012595C2D6A16ED3F708DE03A4D3F4ACF6E7FDA5310B9C6EAEF3D094575F
+                A2FD2EB203821B60225DA482F8DB598310FC7627061AF23A53466E15ED348311
+                CE07286116393EAE58CB522B6E294FDEFAA70D17661AB7C3C0B6C6DFE85ADACD
+                D4E7E5AE386A1C066B5D136E21942D4C5112A3BE422D511A1869198BC607189A
+                C7F29766CF6128D1C71A3585BE9A7AD573AC51DAF9DDB41FF860CB73DFC827D1
+                374F4BE215BCB10AB727083B0BF895F3A002F5CB4FB1D2883CF15EDC993FD670
+                D557DEA0CA071AE2216EE29846BC3C162B6F10FB590844580334BEB074F14596
+                6A48798E566C0E12F28286AB85DED58DF1A2DF7FB689963C9C275808443803E4
+                069FA67BED65A5C4E7903DD9BC3939C07F1BD13A4763FD9BD50BEA558EA9C7EC
+                126B98B44D1E8BB8FA252AC34BAC05226C0FD054919DAC30EA3EDAB4D4D29D4B
+                FE80B6B9AFB36638E2CDEF523F0B47FFAD7A69F922CAA08DD5220B27D03BBF81
+                15B311A23429ED7A1CF10B960213CE091AD69DBC0C4AD7F90242E33EDAFD7D87
+                357284854390C2EF191AB750DC1E4F6E66AC783D35893FA68DD126872FF56443
+                A6782F95F6DBAC19CED202684DD005D022217B0031917C855AE6EFACF9988266
+                0A77B046887554F1FBE9DA8053C93F71602BC7937FA11E4595D45BA09DDB39D4
+                ACFCEE68AABC6157D8CA1BC2F70043B63846F7495FA943EB7BA8B5377A432510
+                5A50CB6FA6854F6D282C22708D8D53233B06183BB91AF2342D48EAA72746EB27
+                209CF55D3BABECDC15D0EE3855BECD1CEF3E83DCEA6B5909851D031832C5C728
+                B5F673B7B7EA1BD901A9B6E148FA50CBA1C822E670644DE1A350F2EBF40C6D76
+                68FA6C8BBE1DB9F483AC84C29E01C60A3793A3FB1D6B4B634E8844CF93E40FDE
+                24855F65D1DA5EE05D14F7B1D613A1261650843EB3165BD79EE59050D8334056
+                D1CAEE380D83FE3487440439C85CDA7F5B6C81F0B3C0223959A2D59C95D39AF3
+                229DD0737F3DF60C60D0891D2C4583C29398185C7A971800BB06981C3CD4F8BE
+                CE320EACB6BEC1AE010C09A769696C0BF738D2C9DFB3620DFB0680886818C807
+                B1492CB0620DFB06C8A50ED3DEE029D6EC3033A3A8A4BF64CD2A11F400428887
+                58B2C3C8F03E4CA4CFF3DA3D38D118C0C523C857685AB485AE1DB65A261A033C
+                902A6028F1386B617913C7D27B59B64E3406F050769CA1C6D625F70E1688CE00
+                25D36A0BB50F1E823057A82091F8356B91109D01B68A3274CF6ED682B132FD18
+                EE5F693EA18D8C08878021E46CE068EB2BBF66ECED0697A27638DA25EA55DAF5
+                5D4E450C7CEAD30911F70042CA60CE50996F81A2ADBC217A03B88AF606E633D7
+                AE38EDBD3D8A81E80D60BEF256230759EB10BD1DB9E1395622257A031884EE62
+                18982FBF648E95C889C900EE1E6AD5D673BE76685AF74F25DB1D9345423C06F0
+                BAB3EEF00B32B985855888C70006E174B026A0A96F7230D4696FB7C46780F4E0
+                7EEFADCEF9D066EC473FF5D5139F01BC2F489D5DACB5328F390C947FC35A6CC4
+                670083D24B0F83016CC3BD23A7588B8D780D3095FE27DDDBFC93034D7D6E9BC3
+                D51888D7001EEDD604C37B63F9CCB60DCB6000F7B7DE4BCE7A9498602976A2DF
+                0DB623533C40397FDC93CDF78093E92B3C791958861E40C8BAD76542C4B6EC6D
+                C7F218A0527E94EE67BDA3EEDE79BBAFD0FF6F182BECA4A130CEDAB2B13C3DC0
+                20C4767200CB32F5D500FE07E8E2A4668B5598B40000000049454E44AE426082}
               FileName = 'D:\'#193'rea de Trabalho\icon.png'
             end>
         end
@@ -123,7 +156,7 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
         end
       end
       inherited Mapa: TTabItem
-        Size.Width = 134.000000000000000000
+        Size.Width = 100.000000000000000000
         ExplicitSize.cx = 320.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited MapView: TMapView
@@ -154,6 +187,91 @@ inherited frmPrincipal_NmXhdpiPh: TfrmPrincipal_NmXhdpiPh
             Action = PreviousTabAction1
             GestureID = sgiRight
           end>
+      end>
+  end
+  inherited ImageList1: TImageList
+    Source = <
+      item
+        MultiResBitmap.Height = 64
+        MultiResBitmap.Width = 64
+        MultiResBitmap.LoadSize = 2
+        MultiResBitmap = <
+          item
+            Width = 64
+            Height = 64
+            PNG = {
+              89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
+              DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+              082C49444154785ED59B7F8C5D4515C7BF33F7ED2FDBEE7B6FDB0A6CEBAE0946
+              1049D4087FA809FEA1047FC21F444005A22118D9DD4763AAD1582BA90D46858D
+              6CDFEEA235D2426B5AA818545269D3106952880A46134021D6D842B6B5B4EFBD
+              6E7F6CDFBE77673C73EFD9F77BCB7BF7CEBD1B3FC9BD7BCECCBBF3E3CCCC9999
+              3B7705E262E4BFCB21BA6F00C46748BB1C525D06C8413F52CD40C963241C06F4
+              5EE8F97D98BEE4AC1F172DD11BE0DEC287A1B011429BCAF772E8DBA02F408B7D
+              90D88C2DA997383012A233C0486E188EF82170F48BC070C07C8E686068175CFD
+              5D4C0F1CE140AB446380D1DC8DD4BD77520BAEE0907ADCE23C54CF0974B9C73D
+              BDE45C0A597C279C9E6E4F6F44E10CDD6EC7D4C0EF38C41AF60D90296CA096DB
+              DCD4EABA7412483C4E393E89E3A983D8235C8EF1F982767069E13A68DC0C946F
+              85E85AC5318CE90DC31B914DDDCF0156B06B80B1FC2608F17DD67C4CEB098C43
+              15C7DB766CC661CA9EF5648CF54DBD48EB1F60327D1F6BA1B167804CE116BA3F
+              EE2B15FE0EA16EC49681A3AC77C6BDB9216869BAFD07FC800AB7524F7882E550
+              D831C0C8A9F7A3E8FC05EF401F8710FA69745FB80DE3979DF354F39B2ED9E5C9
+              6F47499530BDF2154F5E7F6C19E67B7753513FE7E986F398438F7B6DE53721B0
+              6380B1FC1FA8EB7F8A35C27D118973D7E1A743735EC585B39BBAF2D51C799AAE
+              FFF86213EFA62BE9490A2F43BBB77995FCC6D13E94971D049C6BBC380FB50FD9
+              819A3C8321F96F70C60A9FACABFC7CF92D287593577983E3ACABA93C758CF229
+              BAFFB1E5E5C7F99867CCB306939649D3A45D41DEE0E51D92F03D20937F9E92F9
+              086B86111A9F0FB36CE2FF41F7FD984D7DDB0F689315859F50E9AE4736FD3E0E
+              317EE61EBA4FFB8A41BF40F11F652510E10C30FAD620E4CC9B95294FA9D7B02A
+              7D353689B2A71B4673FF8490DB3199FA1187B4C758E13BD0EA2B34F75FC921C0
+              7D3A8193F99721E5157E004D8D6A702DA656CFF87AE7841B024E1739A69AF95E
+              885FD455DE36266D934705CADB2B4370C21940E3B32CF928F15B96A2A3318FC6
+              3274484827A8DFCB022DDECA87319DFA176BD161F2307955A8294300421A40AC
+              6581864362B1A98DD0CB59681FA15BEF230C7579D5942100C19D60E6643FADED
+              CD9CEEA3F50E5AA2DEC95A15E3047DA755FD6D7B243DA75AEB041718CB3F46BE
+              E00ED680A24A61EB40A7E97B04EF01D2697856FBF3FEE298054E27D74568C8AB
+              27D17A17D906C10D30912E5041FCEDAC41087EBB130375799D2B21BB82769AC1
+              08E70394308B1C1F57AC61A919B798236FFDE3BA0B6FD66F87816DF5BFD1D5B4
+              1BA9CDCB5D76CC380CD63A26DC4228939FA224467C855AA2D8B7BA692C1A1F60
+              681CCB5F3E790103891ED6A829F487A857FD8D354A3BB79BF6031F6C7AEE6BB9
+              247AE66849BC8C3756E1F604616701BF721E54A05EF96956EA9133EFC13DB9E3
+              75576DE50DAA74A02E1EE2268EA9C7CB63A1F206B19F8540843540FD0B4B175F
+              62A98A941780B50E12F292BAAB89EE95F5F1A2D77FB681A63C9C675808443803
+              64FB5FA07BF565A5C4E79139DDB83939C07FEBD13A4B63FDEB950BEA758EA9C5
+              EC12AB98B44D1E0BB8FA552AC3ABAC05226C0FD054919DAC30EA41DAB454D39D
+              4D7E8FB6B9FF66CD30E3CDEF52BF0447FFA97269F90A4AA08DD502F3A7D03DB7
+              8115B311A23429ED5A1CF133960213CE091AD69DBE024AD7F80242E341DAFD7D
+              8B357284F94390C2EF191AB750DC1E4F6E64B4703D35893FA68DD126575DEEC9
+              86B1C20354DA6FB266384F0BA0C1A00BA00542F6006222F91AB5CC9F59F33105
+              1DCBDFCD1A21D651C51FA26B03CE247FCF81CD9C483E4B3D8A2AA9B7403B7771
+              A859F9DDDD5079C3AEB0953784EF01864C6194EE93BE5283D6F7536B6FF4864A
+              20B4A096DF4C0B9FEA505840E01A1BA746760C307A7A25E4595A90D44E4F8CD6
+              CF4038EB3B765699D9ABA0DD71AA7C8B39DE7D11D995D7B2120A3B06308C159E
+              A2D45ACFDDDEAA6FED0E48B50D33E9434D87220B98C391C1FCC7A0E457E919DA
+              ECD0F4D9127D17B2E9475809853D038CE66F2647F76BD616C79C1089AEE7C81F
+              BC410ABFCAA2B5BDC0BB28EEE3CD27420DCCA3007D6E0DB6AE39CF21A1B06780
+              8CA295DD091A06BD690E89087290D9B4FFB6D802E1678105B2B248AB392BA735
+              17453AA1E7FE5AEC19C0A0133B588A0685E730D1BFF82E3100760D30D97FA8FE
+              7D9D651C586D7D835D0318124EC3D2D816EE09A493BF61C51AF60D0011D13090
+              8F60939867C51AF60D904D1DA6BDC1F3ACD9E1C8114525FD396B5689A0071042
+              3CC6921D8687F661227D91D7EEC189C6002E9E40AE4CD3A22D74F5B0D532D118
+              E0E1541E0389A7590BCB1B389EDECBB275A2318087B2E30C35B62EBA77B04074
+              06289A569BAF7EF01084D97C1989C42F598B84E80CB05594A0BB76B3168CE5E9
+              A7F0D072F3096D644438040C216703475B5FF935626F37B818D5C3D10E51AFD3
+              AEEF4A2A62E0539F7688B8071052067386CA7C0B146DE50DD11BC055B437309F
+              B976C459EFED510C446F00F395B71A3EC85A9BE8EDC8AE9A652552A2378041E8
+              0E8681F9F24B6659899C980CE0EEA1566D3EE76B85A675FF54B2D5315924C463
+              00AF3BEB36BF20935B588885780C60104E1B6B029AFA26FB439DF6764A7C0648
+              F7EFF7DEEA5C0C6DC67EF4535F2DF119C0FB82D4D9C55A337398455FE951D662
+              233E0318945E7C18F4611B1E587D86B5D888D70053E9BFD2BDC53F39D0D4E7B6
+              385C8D81780DE0D16A4D30B43796CF6C5BB00406707FE5BDE4AC458909966227
+              FADD602BC60A0728E74F78B2F91E70327D95272F014BD0030859F3BA4C88D896
+              BDAD581A03944B4FD2FDBC77D4DD3D67F715FAFF0DA3F99D3414C6595B3296A6
+              071884D84E0E6049A6BE2AC0FF001096A45F9BBB49650000000049454E44AE42
+              6082}
+            FileName = 'D:\'#193'rea de Trabalho\icon.png'
+          end>
+        Name = 'icon'
       end>
   end
 end
