--- a/Teste 31.10 - Local Server - App/app/GUI/EditConfig.fmx
+++ b/Teste 31.10 - Local Server - App/app/GUI/EditConfig.fmx
@@ -17,11 +17,13 @@ object EditConfigForm: TEditConfigForm
     TabOrder = 0
     object SpeedButton1: TSpeedButton
       Align = Left
+      StyledSettings = [Family, Size, Style]
       Size.Width = 49.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
       StyleLookup = 'priortoolbutton'
       Text = 'Voltar'
+      TextSettings.FontColor = claWhite
     end
   end
   object ToolBar2: TToolBar
@@ -30,14 +32,16 @@ object EditConfigForm: TEditConfigForm
     Size.Width = 640.000000000000000000
     Size.Height = 40.000000000000000000
     Size.PlatformDefault = False
+    StyleLookup = 'ToolBar1Style1'
     TabOrder = 1
     object SpeedButton2: TSpeedButton
       Align = Client
+      StyledSettings = [Family, Size, Style]
       Size.Width = 640.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
-      StyleLookup = 'SpeedButton2Style1'
       Text = 'Confirmar'
+      TextSettings.FontColor = claWhite
       OnClick = SpeedButton2Click
     end
   end
@@ -223,7 +227,7 @@ object EditConfigForm: TEditConfigForm
           0840000013546F756368416E696D6174696F6E2E4C696E6B0E00000A54526563
           74616E676C6500095374796C654E616D65060F52656374616E676C6531537479
           6C6505416C69676E0706436C69656E740A46696C6C2E436F6C6F720709784646
-          3136433043430A53697A652E57696474680500000000000000A008400B53697A
+          3043383441410A53697A652E57696474680500000000000000A008400B53697A
           652E4865696768740500000000000000A004401453697A652E506C6174666F72
           6D44656661756C74080000000654476C79706800095374796C654E616D65060A
           676C7970687374796C650C4D617267696E732E4C6566740500000000000000C0
@@ -271,7 +275,7 @@ object EditConfigForm: TEditConfigForm
           6768740500000000000080C2084011536F75726365526563742E426F74746F6D
           05000000000000808108400000000A5452656374616E676C6500095374796C65
           4E616D65060F52656374616E676C65315374796C6505416C69676E0706436C69
-          656E740A46696C6C2E436F6C6F7207097846463136433043430A53697A652E57
+          656E740A46696C6C2E436F6C6F7207097846463043383441410A53697A652E57
           696474680500000000000000A008400B53697A652E4865696768740500000000
           000000A004401453697A652E506C6174666F726D44656661756C7408000000}
       end>
